# CppCG

./: .gitignore  README.md
aufgabe2/: .gitignore  AbstractVectorN.hpp  Makefile  Vector3.hpp  Vector3f.hpp  VectorN.hpp  main.cpp
aufgabe3/: CMakeLists.txt
aufgabe3/src/: a1.cpp  a2.cpp
aufgabe3/src/controller/: engine.hpp  glut_engine.cpp  glut_engine.hpp  glut_engine3.cpp  glut_engine4.cpp
aufgabe3/src/view/: demo_window.cpp  demo_window.hpp  window.cpp  window.hpp
aufgabe4/include/: factory_map.hpp
aufgabe4/include/controller/: engine.hpp  glut_engine.hpp  input_event_handler.hpp  logic.hpp
aufgabe4/include/flappy_box/controller/: box_object_logic.hpp  flappy_engine.hpp
aufgabe4/include/flappy_box/model/: box.hpp
aufgabe4/include/model/: game.hpp  game_object.hpp
aufgabe4/include/view/: gl_renderer.hpp  glut_window.hpp
aufgabe4/src/: main43.cpp  main44.cpp
aufgabe4/src/controller/: engine.cpp  logic.cpp
aufgabe4/src/model/: game.cpp
aufgabe4/src/view/: al_renderer.cpp  gl_renderer.cpp  glut_window.cpp
aufgabe5/: CMakeLists.txt  blatt5.kdev4
aufgabe5/include/: factory_map.hpp
aufgabe5/include/controller/: engine.hpp  input_event_handler.hpp
aufgabe5/include/flappy_box/controller/: box_object_logic.hpp  flappy_engine.hpp  game_over_logic.hpp  paddle_logic.hpp  particle_logic.hpp  world_logic.hpp
aufgabe5/include/model/: game_object.hpp
aufgabe5/include/view/: gl_renderer.hpp  glut_window.hpp
aufgabe5/src/: main.cpp
aufgabe5/src/controller/: glut_engine.cpp
aufgabe5/src/view/: gl_renderer.cpp  glut_window.cpp
(+34 files in other folders)
